2019-05-15  Mark Wielaard  <mark@klomp.org>

	[BZ#24476]
	* dlfcn/dlerror.c (__dlerror_main_freeres): Guard using
	__libc_once_get (once) and static_buf == NULL.
	(__dlerror): Check we have a valid key, set result to static_buf
	otherwise.

2019-05-15  Andreas Schwab  <schwab@suse.de>

	[BZ #20568]
	* libio/wfileops.c (_IO_wfile_sync): Correct last argument to
	__codecvt_do_length.
	* libio/Makefile (tests): Add tst-wfile-sync.
	($(objpfx)tst-wfile-sync.out): Depend on $(gen-locales).
	* libio/tst-wfile-sync.c: New file.
	* libio/tst-wfile-sync.input: New file.

2018-12-21  Istvan Kurucsai <pistukem@gmail.com>

	* malloc/malloc.c (munmap_chunk): Verify chunk alignment.

2018-12-20  Istvan Kurucsai <pistukem@gmail.com>

	* malloc/malloc.c (mremap_chunk): Additional checks.

2018-08-17  Istvan Kurucsai  <pistukem@gmail.com>

	* malloc/malloc.c (_int_malloc): Additional binning code checks.

2019-04-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #18035]
	* elf/pldd-xx.c: Use _Static_assert in of pldd_assert.
	(E(find_maps)): Avoid use alloca, use default read file operations
	instead of explicit LFS names, and fix infinite loop.
	* elf/pldd.c: Explicit set _FILE_OFFSET_BITS, cleanup headers.
	(get_process_info): Use _Static_assert instead of assert, use default
	directory operations instead of explicit LFS names, and free some
	leadek pointers.

2019-04-03  TAMUKI Shoichi  <tamuki@linet.gr.jp>

	[BZ #22964]
	* localedata/locales/ja_JP (LC_TIME): Add entry for the new Japanese
	era.

2019-03-21  Stefan Liebler  <stli@linux.ibm.com>

	* sysdeps/s390/dl-procinfo.h (HWCAP_IMPORTANT):
	Add HWCAP_S390_VX and HWCAP_S390_VXE.

2019-01-31  Paul Eggert  <eggert@cs.ucla.edu>

	CVE-2019-9169
	regex: fix read overrun [BZ #24114]
	Problem found by AddressSanitizer, reported by Hongxu Chen in:
	https://debbugs.gnu.org/34140
	* posix/regexec.c (proceed_next_node):
	Do not read past end of input buffer.

2018-11-07  Andreas Schwab  <schwab@suse.de>

	[BZ #23864]